--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+
+    <meta charSet="utf-8"/>
+    <title>SM64 Carpetless - Orthogonal Jones Table</title>
+    <meta name="description" content="A filterable and sortable table for all the Orthogonal Jones Carpetless dictionary data for Super Mario 64." />
+    <meta property="og:title" content="SM64 Carpetless- Orthogonal Jones Table" />
+    <meta property="og:description" content="A filterable and sortable table for all the Orthogonal Jones Carpetless dictionary data for Super Mario 64." />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta property="og:url" content="https://mphilipp622.github.io/orthogonal-jones-table" />
+    <link rel="canonical" href="https://mphilipp622.github.io/orthogonal-jones-table"/>
+    
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +29,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
